--- a/versions/config.json
+++ b/versions/config.json
@@ -1,7 +1,7 @@
 [
   {
     "name": "Latest (All Features)",
-    "filename": "../main.py",
+    "filename": "main.py",
     "feature": "Unified, parallel, memoized, memory-safe, real-time progress, performance metrics"
   },
   {
